--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 	
 	<div class="scroller"></div>
 	<div class="mover"></div>
+	<div class="contact-page-bg"></div>
 	<img src="" alt="" class="contact-title">
 </body>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
