Mobile/other viewport optimizations

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,17 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 <title>Webpack 2 Basics</title>
 </head>
 <body>
+	<div class="small-intro-container">
+		<div class="intro-text">
+			Hey there,<br>this is<br>some text I'm<br>going to<br>try moving<br>right now.
+		</div>
+	</div>
 	<div class="intro-container">
 		<div class="row">
 			<div class="col-xs-6" id="model-container">
 				<div style="text-align: center;">
 					<img src="" alt="" class="model">
+					<img src="" alt="" class="model-small">
 				</div>
 			</div>
 			<div class="col-xs-6" id="intro-text-container">
