Intro mobile optimization

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,14 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 </head>
 <body>
 	<div class="small-intro-container">
-		<div class="intro-text">
-			Hey there,<br>this is<br>some text I'm<br>going to<br>try moving<br>right now.
+		<div id="small-intro-text-container">
+			<div style="text-align: center;">
+				<div class="small-intro-text">
+					Hey there,<br>this is<br>some text I'm<br>going to<br>try moving<br>right now.
+				</div>
+			</div>
 		</div>
+
 	</div>
 	<div class="intro-container">
 		<div class="row">
@@ -28,8 +33,7 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 				<div style="text-align: center;">
 					<div class="intro-text">
 						Hey there,<br>this is<br>some text I'm<br>going to<br>try moving<br>right now.
-					</div>
-					
+					</div>					
 				</div>
 			</div>
 		</div>
