Stylized intro text

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,27 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 	<div class="small-intro-container">
 		<div id="small-intro-text-container">
 			<div style="text-align: center;">
-				<div class="small-intro-text">
-					Hey there,<br>this is<br>some text I'm<br>going to<br>try moving<br>right now.
+				<div style="width: 100%;">
+					<div class="intro-text">
+						<div class="intro-thin" style="margin-bottom: 7%;">Hey there, I'm</div>
+						<div class="intro-artem" id="small-intro-texts">
+							<div class="text">
+								ARTEM
+							</div>
+						</div>
+						<div class="intro-druzhkov">
+							<div class="text">
+								DRUZHKOV
+							</div>
+						</div>
+						<div class="intro-thin" style="margin-top: 7%;">Need a front-end</div>
+						<div class="intro-thin" style="margin-bottom: 4%;">developer?</div>
+						<div class="intro-med">
+							<div class="text">
+								Sign me up.
+							</div>
+						</div>
+					</div>					
 				</div>
 			</div>
 		</div>
@@ -30,9 +49,26 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 				</div>
 			</div>
 			<div class="col-xs-6" id="intro-text-container">
-				<div style="text-align: center;">
+				<div style="width: 100%;">
 					<div class="intro-text">
-						Hey there,<br>this is<br>some text I'm<br>going to<br>try moving<br>right now.
+						<div class="intro-thin" style="margin-bottom: 7%;">Hey there, I'm</div>
+						<div class="intro-artem">
+							<div class="text">
+								ARTEM
+							</div>
+						</div>
+						<div class="intro-druzhkov">
+							<div class="text">
+								DRUZHKOV
+							</div>
+						</div>
+						<div class="intro-thin" style="margin-top: 7%;">Need a front-end</div>
+						<div class="intro-thin" style="margin-bottom: 4%;">developer?</div>
+						<div class="intro-med">
+							<div class="text">
+								Sign me up.
+							</div>
+						</div>
 					</div>					
 				</div>
 			</div>
