Projects render optimization

--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,8 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 		<div class="row">
 			<div class="col-xs-6" id="model-container">
 				<div style="text-align: center;">
-					<img src="" alt="" class="model unloaded-model">
-					<img src="" alt="" class="model-small unloaded-model">
+					<img src="" alt="" class="model unloaded">
+					<img src="" alt="" class="model-small unloaded">
 				</div>
 			</div>
 			<div class="col-xs-6" id="intro-text-container">
