--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 	<div class="bg" id="purple"></div>
 	<div class="bg" id="blue"></div>
 
-	<div class="mobile-intro">
+	<div class="mobile-intro" style="display: none;">
 		<div class="mobile-intro-container">
 			<div id="mobile-intro-text-container">
 				<div style="text-align: center;">
@@ -377,7 +377,7 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 
 			<div align="center" class="img-container">
 				
-				<a href="https://draggr.io">
+				<a href="/resume.pdf">
 					<div id="resume">
 						<img src="" alt="Resume" class="resume">
 						<p>Resume</p>
@@ -422,14 +422,14 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 		</div>		
 	</div>
 
-	<div class="contact-form-container mobile">
+	<div class="contact-form-container mobile" style="display: none;">
 		<div>
 
 			<h1 align="center" style="font-size: 10vmax; margin-bottom: 50px;">Contact</h1>
 
 			<div align="center" class="img-container">
 				
-				<a href="https://draggr.io">
+				<a href="/resume.pdf">
 					<div id="resume">
 						<img src="" alt="Resume" class="resume">
 						<p>Resume</p>
